fix: Update images path to be absolute

--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/qr-code-component/images/favicon-32x32.png"
     />
 
     <link
@@ -92,7 +92,10 @@
   <body>
     <main class="wrapper">
       <article class="qr-code-card">
-        <img class="qr-code-card__image" src="./images/image-qr-code.png" />
+        <img
+          class="qr-code-card__image"
+          src="/qr-code-component/images/image-qr-code.png"
+        />
         <h1 class="qr-code-card__title">
           Improve your front-end skills by building projects
         </h1>
