--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -95,6 +95,7 @@
         <img
           class="qr-code-card__image"
           src="/qr-code-component/images/image-qr-code.png"
+          alt="QR Code"
         />
         <h1 class="qr-code-card__title">
           Improve your front-end skills by building projects
