feat: Create layout for notifications page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           <li>
             <a href="./qr-code-component">QR Code component (29-09-2022)</a>
           </li>
+          <li>
+            <a href="./notifications-page">Notifications page (29-09-2022)</a>
+          </li>
         </ol>
       </nav>
     </main>
