fix: Include h2 inside article

--- a/notifications-page/index.html
+++ b/notifications-page/index.html
@@ -234,7 +234,7 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Mark Webber</strong
                 >
@@ -242,7 +242,7 @@
                 <strong class="notification__link notification__link--tertiary"
                   >My first tournament today!</strong
                 >
-              </p>
+              </h2>
               <p class="notification__time">1m ago</p>
             </div>
           </article>
@@ -255,12 +255,12 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Angela Gray</strong
                 >
                 followed you
-              </p>
+              </h2>
               <p class="notification__time">5m ago</p>
             </div>
           </article>
@@ -273,13 +273,13 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Jacob Thompson</strong
                 >
                 has joined your group
                 <strong class="notification__link">Chess Club</strong>
-              </p>
+              </h2>
               <p class="notification__time">1 day ago</p>
             </div>
           </article>
@@ -292,12 +292,12 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Rizky Hasanuddin</strong
                 >
                 sent you a private message
-              </p>
+              </h2>
               <p class="notification__time">5 days ago</p>
               <p class="notification__comment">
                 Hello, thanks for setting up the Chess Club. I've been a member
@@ -315,12 +315,12 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Kimberly Smith</strong
                 >
                 commented on your picture
-              </p>
+              </h2>
               <p class="notification__time">1 week ago</p>
             </div>
             <img
@@ -340,7 +340,7 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Nathan Peterson</strong
                 >
@@ -348,7 +348,7 @@
                 <strong class="notification__link notification__link--tertiary"
                   >5 end-game strategies to increase your win rate</strong
                 >
-              </p>
+              </h2>
               <p class="notification__time">2 weeks ago</p>
             </div>
           </article>
@@ -361,13 +361,13 @@
               class="notification__avatar"
             />
             <div>
-              <p class="notification__primary-message">
+              <h2 class="notification__primary-message">
                 <strong class="notification__link notification__link--secondary"
                   >Anna Kim</strong
                 >
                 left the group
                 <strong class="notification__link">Chess Club</strong>
-              </p>
+              </h2>
               <p class="notification__time">2 weeks ago</p>
             </div>
           </article>
