feat: Include challenge on main page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
           <li>
             <a href="./notifications-page">Notifications page (29-09-2022)</a>
           </li>
+          <li>
+            <a href="./interactive-card-details-form"
+              >Interactive card details form (07-10-2022)</a
+            >
+          </li>
         </ol>
       </nav>
     </main>
