fix: Center footer with form

--- a/interactive-card-details-form/index.html
+++ b/interactive-card-details-form/index.html
@@ -92,7 +92,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
-        padding: 5px 0;
+        padding: 5px 0 5px var(--back-card-offset-left);
       }
 
       .attribution a {
